--- a/diffusedart/src/App.css
+++ b/diffusedart/src/App.css
@@ -100,3 +100,52 @@ border: 1px solid transparent;
   align-items: center;
   justify-content: center;
 }
+
+.login-btn{
+  background:white;
+  font-size: large;
+  color:white;
+  width:5vw;
+  height: 20%;
+  font-family: "Garamond", serif;
+  border: 1px solid transparent;
+  }
+
+  /* NAVBAR STUFF */
+ .navbar-main{
+  background-color: #151c22e7;
+  height: 5vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  font-family: "Garamond", serif;
+  font-size: large;
+  position: fixed;
+ }
+ .navbar-main > input{
+  opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 99;
+    height: (100% - 2px);
+    margin: 0;
+    padding: 0;
+    display: block;
+    cursor: pointer;
+    width: 100%;
+ }
+ .container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
