--- a/diffusedart/src/App.css
+++ b/diffusedart/src/App.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: #282c34;
 }
 
@@ -26,23 +26,83 @@ body{
   font-size: calc(10px + 2vmin);
   color: white;
 }
-.search{
+.home {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+.search {
   background-color: #282c34;
-  min-height: 50vh;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100%;
 }
-.logoArea{
+.logoArea {
   font-family: "Garamond", serif;
-  height:20vh;
+  height: 20vh;
 }
-.searchArea{
-  height: 15vh;
-  width: 30vw;
+.form-area {
+  width: 100%;
+  height: 10vh;
+}
+.input-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 10vh;
+}
+.upload-button {
+  height: 5vh;
+  width: 5vw;
+  cursor: pointer;
+  border-bottom-left-radius: 1vw;
+  border: 1px solid black;
+  background-color: #eee;
+  color: #282c34;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.6em;
+  font-weight: bolder;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.custom-file-upload {
+  border: 0.5px solid #ccc;
+  cursor: pointer;
+  height: 5vh;
+  width: 20vw;
+  font-size: 0.5em;
+  overflow-x: scroll;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  word-wrap: break-word;
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  border-top-right-radius: 1vw;
+}
+.custom-file-upload:hover {
+  background-color: #1e2127;
+}
+.custom-file-upload > p {
+  margin: 1vh;
+}
+.searchArea {
+  height: 25vh;
+  width: 60vw;
   font-family: "Garamond", serif;
   display: flex;
   flex-direction: column;
@@ -50,102 +110,116 @@ body{
   justify-content: space-evenly;
 }
 .search-input {
-background: #eee;
-width:30vw;
-height: 20%;
-font-family: "Garamond", serif;
-font-size: large;
-border: 1px solid transparent;
-}
-.search-btn {
-  background:#151c22;
-  font-size: large;
-  color:white;
-  width:5vw;
+  background: #eee;
+  width: 100%;
   height: 20%;
   font-family: "Garamond", serif;
+  font-size: large;
   border: 1px solid transparent;
-  }
-
+  border-radius: 1em;
+}
 .img-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, max-content));
-  grid-gap: 16px;
+  grid-template-rows: repeat(auto-fill, minmax(300px, max-content));
+  grid-auto-flow: dense;
+  grid-gap: 0.3rem;
   justify-content: center;
   width: 90%;
   height: auto;
   margin: 0 auto;
 }
-
-.img-container{
+.img-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 300px;
   margin: 5px;
+  height: auto;
 }
-.img-box{
-  width: 300px;
-  height: 300px;
+.img-box {
+  object-fit: cover;
+  width: 100%;
+  max-height: 300px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   cursor: pointer;
   transition: all 0.3s ease;
-
 }
-.img-box img{
+.img-box img {
   width: 125px;
   height: 125px;
   align-items: center;
   justify-content: center;
 }
-
-.login-btn{
-  background:white;
+.login-btn {
+  background: white;
   font-size: large;
-  color:white;
-  width:5vw;
+  color: white;
+  width: 5vw;
   height: 20%;
   font-family: "Garamond", serif;
   border: 1px solid transparent;
-  }
+}
+.auth-button img {
+  height: 3vh;
+  width: auto;
+  cursor: pointer;
+}
+.username-area {
+  height: 3vh;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0.3em;
+  border-radius: 0.2em;
+}
 
-  /* NAVBAR STUFF */
- .navbar-main{
+/* NAVBAR STUFF */
+.nav-box {
   background-color: #151c22e7;
   height: 5vh;
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  position: fixed;
+}
+.navbar-main {
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
-  color: white;
-  font-family: "Garamond", serif;
+  color: #ffffff;
   font-size: large;
   position: fixed;
- }
- .navbar-main > input{
+  font-weight: bolder;
+}
+.navbar-main > input {
   opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 99;
-    height: (100% - 2px);
-    margin: 0;
-    padding: 0;
-    display: block;
-    cursor: pointer;
-    width: 100%;
- }
- .container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99;
+  height: (100% - 2px);
+  margin: 0;
+  padding: 0;
+  display: block;
+  cursor: pointer;
+  width: 100%;
+}
+.container {
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
